update version, and optimziation of image size.

--- a/pro/Dockerfile
+++ b/pro/Dockerfile
@@ -3,14 +3,13 @@ MAINTAINER Swire Chen <idoop@msn.cn>
 
 ARG ZENTAO_URL=http://dl.cnezsoft.com/zentao/pro7.1/ZenTaoPMS.pro7.1.stable.zbox_64.tar.gz
 
-RUN apt-get update && apt-get install -y wget php-ldap \
-    --no-install-recommends && rm -r /var/lib/apt/lists/*
-
-RUN wget ${ZENTAO_URL} -O zbox.tar.gz && mv zbox.tar.gz /tmp 
-
 COPY docker-entrypoint /usr/local/bin/docker-entrypoint
 
-RUN chmod +x           /usr/local/bin/docker-entrypoint
+RUN apt-get update \
+    && apt-get install -y wget php-ldap --no-install-recommends \
+    && rm -r /var/lib/apt/lists/* \
+    && wget ${ZENTAO_URL} -O zbox.tar.gz && mv zbox.tar.gz /tmp \
+    && chmod +x           /usr/local/bin/docker-entrypoint
 
 EXPOSE 80 3306
 
