update version, and add health check.

--- a/pro/Dockerfile
+++ b/pro/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:xenial
 MAINTAINER Swire Chen <idoop@msn.cn>
 
-ARG ZENTAO_URL=http://dl.cnezsoft.com/zentao/pro7.1/ZenTaoPMS.pro7.1.stable.zbox_64.tar.gz
+ENV ZENTAO_VER=7.3
+ARG ZENTAO_URL=http://dl.cnezsoft.com/zentao/pro${ZENTAO_VER}/ZenTaoPMS.pro${ZENTAO_VER}.zbox_64.tar.gz
 
 COPY docker-entrypoint /usr/local/bin/docker-entrypoint
 
@@ -10,6 +11,8 @@ RUN apt-get update \
     && rm -r /var/lib/apt/lists/* \
     && wget ${ZENTAO_URL} -O zbox.tar.gz && mv zbox.tar.gz /tmp \
     && chmod +x           /usr/local/bin/docker-entrypoint
+
+HEALTHCHECK --start-period=20s --interval=45s --timeout=3s CMD wget http://localhost/ -O /dev/null || exit 1
 
 EXPOSE 80 3306
 
