--- a/pro/Dockerfile
+++ b/pro/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:xenial
 MAINTAINER Swire Chen <idoop@msn.cn>
 
-ENV ZENTAO_VER=7.5.1
+ENV ZENTAO_VER=8.2
 ARG ZENTAO_URL=http://dl.cnezsoft.com/zentao/pro${ZENTAO_VER}/ZenTaoPMS.pro${ZENTAO_VER}.zbox_64.tar.gz
 
 COPY docker-entrypoint /usr/local/bin/docker-entrypoint
@@ -9,7 +9,7 @@ COPY docker-entrypoint /usr/local/bin/docker-entrypoint
 RUN apt-get update \
     && apt-get install -y wget php-ldap --no-install-recommends \
     && rm -r /var/lib/apt/lists/* \
-    && wget ${ZENTAO_URL} -O zbox.tar.gz && mv zbox.tar.gz /tmp \
+    && wget -q ${ZENTAO_URL} -O zbox.tar.gz && mv zbox.tar.gz /tmp \
     && chmod +x           /usr/local/bin/docker-entrypoint
 
 HEALTHCHECK --start-period=20s --interval=45s --timeout=3s CMD wget http://localhost/ -O /dev/null || exit 1
