--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,9 @@ services:
       USER: "root"
       PASSWD: "123456"
       BIND_ADDRESS: "false"
-      SMTP_HOST: "163.177.90.125 smtp.exmail.qq.com"
+#      SMTP_HOST: "163.177.90.125 smtp.exmail.qq.com"
+    extra_hosts:
+      - "smtp.exmail.qq.com 163.177.90.125"
     volumes:
       - ./data:/opt/zbox/
     restart: always
